<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <TextView android:id="@+id/option_txt_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/option_txt_1"
        android:textAppearance="?android:attr/textAppearanceMedium"/>
    <CheckBox android:id="@+id/chk_no_repeat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/chk_no_repeat"/>
    <CheckBox android:id="@+id/chk_date_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/chk_date_time"/>
    <CheckBox android:id="@+id/chk_radio_power"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/chk_radio_power"/>
    <LinearLayout android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom">
        <Button android:id="@+id/btn_opt_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_menu_back"
            android:drawableStart="@drawable/ic_menu_back"
            android:text="@string/btn_back"/>
        <TextView android:id="@+id/textView2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>
        <Button android:id="@+id/btn_opt_forward"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableEnd="@drawable/ic_menu_forward"
            android:drawableRight="@drawable/ic_menu_forward"
            android:text="@string/btn_forward"/>
    </LinearLayout>
</LinearLayout>
