<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <TextView android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_BatteryLevel"
        android:textAppearance="?android:attr/textAppearanceMedium"/>
    <LinearLayout android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="30dp"
        android:orientation="horizontal">
        <ProgressBar android:id="@+id/progressBar_batt_channel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            style="?android:attr/progressBarStyleHorizontal" />
        <TextView android:id="@+id/txt_batt_channel"
            android:layout_width="60dip"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:textAppearance="?android:attr/textAppearanceMedium"/>
    </LinearLayout>
    <TextView android:id="@+id/txt_channel_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:text="@string/txt_channel_1"
        android:textAppearance="?android:attr/textAppearanceMedium"/>
    <TableLayout android:id="@+id/tableLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TableRow android:id="@+id/tableRow1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <CheckBox android:id="@+id/chk_ch8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_channel_2"/>
            <CheckBox android:id="@+id/chk_ch11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_channel_5" />
        </TableRow>
        <TableRow android:id="@+id/tableRow2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <CheckBox android:id="@+id/chk_ch9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_channel_3"/>
            <CheckBox android:id="@+id/chk_ch12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/txt_channel_6" />
        </TableRow>
        <TableRow android:id="@+id/tableRow3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <CheckBox android:id="@+id/chk_ch10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_channel_4"/>
            <CheckBox android:id="@+id/chk_ch13"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/txt_channel_7" />
        </TableRow>
    </TableLayout>
    <Button android:id="@+id/btn_channel"
        android:layout_width="100dip"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:text="@string/btn_setting"/>
    <LinearLayout android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <TextView android:id="@+id/txt_channel_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:text="@string/txt_firm"
            android:textAppearance="?android:attr/textAppearanceMedium"/>
        <TextView android:id="@+id/txt_firm_channel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:lines="1"
            android:textAppearance="?android:attr/textAppearanceMedium"/>
    </LinearLayout>
</LinearLayout>
