<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    <TextView android:id="@+id/txt_read_mode_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_read_mode_1"
        android:textAppearance="?android:attr/textAppearanceMedium" />
    <LinearLayout android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dip">
        <SeekBar android:id="@+id/seekBar_radio_cycle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:max="160"
            android:progress="0"/>
        <TextView android:id="@+id/txt_radio_cycle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:lines="1"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:width="90dp"/>
    </LinearLayout>
    <TextView android:id="@+id/txt_read_mode_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/txt_read_mode_2"
        android:textAppearance="?android:attr/textAppearanceMedium"/>
    <LinearLayout android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp">
        <Spinner android:id="@+id/spinner_session"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:entries="@array/spinner_sessions"
            android:prompt="@string/txt_spinner_notselect"/>
    </LinearLayout>
    <TextView android:id="@+id/txt_read_mode_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/txt_read_mode_3"
        android:textAppearance="?android:attr/textAppearanceMedium"/>
    <LinearLayout android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp">
        <Spinner android:id="@+id/spinner_mode"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:entries="@array/spinner_modes"
            android:prompt="@string/txt_spinner_notselect"/>
    </LinearLayout>
    <LinearLayout android:id="@+id/linearLayout5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical">
        <Button android:id="@+id/btn_read_mode"
            android:layout_width="100dip"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:text="@string/btn_setting" />
    </LinearLayout>
    <LinearLayout android:id="@+id/linearLayout6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">
        <TextView android:id="@+id/txt_read_mode_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_read_mode_4"
            android:textAppearance="?android:attr/textAppearanceMedium" />
        <Button android:id="@+id/btn_read_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_read_start" />
        <Button android:id="@+id/btn_read_end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_read_end" />
    </LinearLayout>
    <LinearLayout android:id="@+id/linearLayout4"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <TextView android:id="@+id/txt_read_mode_5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:text="@string/txt_firm"
            android:textAppearance="?android:attr/textAppearanceMedium" />
        <TextView android:id="@+id/txt_firm_read_mode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </LinearLayout>
</LinearLayout>