<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <CheckBox android:id="@+id/chk_mask_select"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/chk_mask_select"
        android:textAppearance="?android:attr/textAppearanceMedium"/>
    <LinearLayout android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView android:id="@+id/textView1"
            android:layout_width="100dip"
            android:layout_height="wrap_content"
            android:text="@string/mask_txt_1"
            android:textAppearance="?android:attr/textAppearanceMedium"/>
        <Spinner android:id="@+id/spn_memory_bank"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:entries="@array/memory_bank" />
    </LinearLayout>
    <LinearLayout android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView android:id="@+id/textView2"
            android:layout_height="wrap_content"
            android:layout_width="100dip"
            android:text="@string/mask_txt_2"
            android:textAppearance="?android:attr/textAppearanceMedium"/>
        <EditText android:id="@+id/edt_offset"
            android:layout_width="70dip"
            android:layout_height="wrap_content"
            android:text="00"
            android:inputType="number"/>
        <TextView android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mask_txt_4"
            android:textAppearance="?android:attr/textAppearanceMedium"/>
    </LinearLayout>
    <LinearLayout android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView android:id="@+id/textView3"
            android:layout_width="100dip"
            android:layout_height="wrap_content"
            android:text="@string/mask_txt_3"
            android:textAppearance="?android:attr/textAppearanceMedium"/>
        <EditText android:id="@+id/edt_bits"
            android:layout_width="70dip"
            android:layout_height="wrap_content"
            android:text="16"
            android:inputType="number"/>
        <TextView android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mask_txt_4"
            android:textAppearance="?android:attr/textAppearanceMedium"/>
    </LinearLayout>
    <TextView android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mask_txt_5"
        android:textAppearance="?android:attr/textAppearanceMedium"/>
    <EditText android:id="@+id/edt_pattern"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="0000" />
    <LinearLayout android:id="@+id/linearLayout4"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom">
        <Button android:id="@+id/btn_mask_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="前へ"
            android:drawableLeft="@drawable/ic_menu_back"
            android:drawableStart="@drawable/ic_menu_back"/>
        <TextView android:id="@+id/textView7"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>
        <Button android:id="@+id/btn_mask_forward"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableEnd="@drawable/ic_menu_forward"
            android:drawableRight="@drawable/ic_menu_forward"
            android:text="@string/btn_forward"/>
    </LinearLayout>
</LinearLayout>
