<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <TextView android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_BatteryLevel"
        android:textAppearance="?android:attr/textAppearanceMedium"/>
    <LinearLayout android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="30dp"
        android:orientation="horizontal">
        <ProgressBar android:id="@+id/progressBar_batt_radio"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>
        <TextView android:id="@+id/txt_batt_radio"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:textAppearance="?android:attr/textAppearanceMedium"/>
    </LinearLayout>
    <TextView android:id="@+id/txt_radio_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:text="@string/txt_radio_1"
        android:textAppearance="?android:attr/textAppearanceMedium"/>
    <LinearLayout android:id="@+id/linearLayout6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginStart="5dp">
        <TextView android:id="@+id/textView3"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/txt_radio_2"
            android:textAppearance="?android:attr/textAppearanceMedium"/>
        <TextView android:id="@+id/txt_radio_max"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAppearance="?android:attr/textAppearanceMedium"/>
    </LinearLayout>
    <LinearLayout android:id="@+id/linearLayout7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginStart="5dp">
        <TextView android:id="@+id/textView5"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/txt_radio_3"
            android:textAppearance="?android:attr/textAppearanceMedium"/>
        <TextView android:id="@+id/txt_radio_now"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"/>
    </LinearLayout>
    <TextView android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginStart="5dp"
        android:text="@string/txt_radio_4"
        android:textAppearance="?android:attr/textAppearanceMedium"/>
    <LinearLayout android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dip"
        android:orientation="horizontal" >
        <SeekBar android:id="@+id/seekBar_radio"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:max="30"
            android:progress="0"/>
    </LinearLayout>
    <LinearLayout android:id="@+id/linearLayout9"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView android:id="@+id/txt_radio"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="fill_horizontal"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:textAppearance="?android:attr/textAppearanceLarge"/>
        <Button android:id="@+id/btn_radio"
            android:layout_width="100dip"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:text="@string/btn_setting"/>
    </LinearLayout>
    <View android:id="@+id/linearLayout4"
        android:layout_width="match_parent"
        android:layout_height="30dp"/>
    <LinearLayout android:id="@+id/linearLayout5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_radio_5"
            android:textAppearance="?android:attr/textAppearanceMedium"/>
        <Button android:id="@+id/btn_radio_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_radio_start"/>
        <Button android:id="@+id/btn_radio_stop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_radio_stop"/>
    </LinearLayout>
    <LinearLayout android:id="@+id/linearLayout8"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <TextView android:id="@+id/txt_radio_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:text="@string/txt_firm"
            android:textAppearance="?android:attr/textAppearanceMedium" />
        <TextView android:id="@+id/txt_firm_radio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </LinearLayout>
</LinearLayout>
