<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <TextView android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:text="@string/info_device"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="17sp"/>

    <Button android:id="@+id/btn_scan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/ic_menu_search"
        android:drawableStart="@drawable/ic_menu_search"
        android:text="@string/btn_scan"
        android:textAppearance="?android:attr/textAppearanceMedium"/>

    <LinearLayout android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView android:id="@+id/txt_device_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="name"
            android:textStyle="bold"
            android:textSize="32sp"/>
        <TextView android:id="@+id/txt_device_addr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="addr"
            android:textSize="16sp"/>
    </LinearLayout>

    <LinearLayout android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="bottom"
        android:orientation="horizontal">
        <Button android:id="@+id/btn_dev_disconnect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_menu_stop"
            android:drawableStart="@drawable/ic_menu_stop"
            android:text="@string/btn_disconnect"/>
        <TextView android:id="@+id/textView2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>
        <Button android:id="@+id/btn_dev_forward"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableEnd="@drawable/ic_menu_forward"
            android:drawableRight="@drawable/ic_menu_forward"
            android:text="@string/btn_connect_forward"/>
    </LinearLayout>
</LinearLayout>
