<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <TextView android:id="@+id/txt_buzzer_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_BatteryLevel"
        android:textAppearance="?android:attr/textAppearanceMedium"/>
    <LinearLayout android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:orientation="horizontal">
        <ProgressBar android:id="@+id/progressBar_batt_buzzer"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>
        <TextView android:id="@+id/txt_batt_buzzer"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:textAppearance="?android:attr/textAppearanceMedium"/>
    </LinearLayout>
    <TextView android:id="@+id/txt_buzzer_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_Buzzer"
        android:textSize="17sp"/>
    <LinearLayout android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="30dp"
        android:orientation="horizontal">
        <SeekBar android:id="@+id/seekBar_buzzer"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:progress="1"
            android:max="2" />
        <TextView android:id="@+id/txt_buzzer"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:gravity="end"/>
    </LinearLayout>
    <CheckBox android:id="@+id/chk_buzzer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_flush" />
    <Button android:id="@+id/btn_buzzer"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:text="@string/btn_setting"/>
    <LinearLayout android:id="@+id/linearLayout5"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">
        <TextView android:id="@+id/txt_buzzer_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:text="@string/txt_firm"
            android:textAppearance="?android:attr/textAppearanceMedium"/>
        <TextView android:id="@+id/txt_firm_buzzer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"/>
    </LinearLayout>
</LinearLayout>
